Created a wrapper for the final method ASTNode.getStartPosition() in ASTNodeHelper.